content boxes: let navigation align right when wrapped, fixes #7084

--- a/public/assets/stylesheets/less/content_box.less
+++ b/public/assets/stylesheets/less/content_box.less
@@ -27,10 +27,12 @@ section.contentbox {
         }
 
         > nav {
-            text-align: right;
-            padding: 2px;
-            display: flex;
             align-items: center;
+            display: flex;
+            flex: 1 1 auto;
+            justify-content: end;
+            padding: 2px;
+            text-align: right;
             
             > *:not(:first-child) {
                 padding-left: 0.25em;
