--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -2958,10 +2958,12 @@ section.contentbox header h1 > a svg {
   margin-right: 5px;
 }
 section.contentbox header > nav {
-  text-align: right;
-  padding: 2px;
-  display: flex;
   align-items: center;
+  display: flex;
+  flex: 1 1 auto;
+  justify-content: end;
+  padding: 2px;
+  text-align: right;
 }
 section.contentbox header > nav > *:not(:first-child) {
   padding-left: 0.25em;
